prevent overflow on small screens

--- a/styles.css
+++ b/styles.css
@@ -279,3 +279,6 @@ p {
   margin: 0;
   overflow: hidden;
 }
+#scoreboard {
+  margin-bottom: 32px;
+}
